# ti_mspm0l1306_cmake_template

./: .gitmodules  CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
src/: main.c
